# Interactive-Machine-Learning-Laboratory-Theory-Explorer

./: .gitignore  README.md  pyproject.toml  run.py
src/syllabusml/: __init__.py  app.py  config.py
src/syllabusml/classification/: __init__.py  engine.py  ui.py
src/syllabusml/clustering/: __init__.py  engine.py  ui.py
src/syllabusml/regression/: __init__.py  engine.py  ui.py
src/syllabusml/stats/: __init__.py  engine.py  ui.py
src/syllabusml/theory/: __init__.py  engine.py  explanations.py  ui.py
src/syllabusml/utils/: __init__.py
